# AsterixParser

./: .gitignore  AsterixParser.pro  CMakeLists.txt  LICENSE  README.md
asterixSpecification/: cat62_v1.17.xml
example/: AsterixTest.pro  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  asterix.cpp  asterix.h  asterixparser.cpp  asterixparser.h  asterixparser_global.h  bit.h  scale_expression.bison.cpp  scaleexpressionparser.cpp  scaleexpressionparser.h  uap.cpp  uap.h
